# expenses

./: .dockerignore  .editorconfig  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  DESIGN.md  Dockerfile  NOTICE  README.md  SECURITY.md  TESTING.md  docker-compose.yml  pyproject.toml  start.sh
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  full-tests.yml  release.yml
alembic/: env.py
alembic/versions/: 202512141700_add_budgets.py  202512170900_add_rules.py  (+20 more)
ios/: DESIGN.md
tests/: conftest.py  test_admin_elevation_api.py  test_admin_system_health_api.py  test_ai_gating.py  test_api_flows.py  test_api_transactions.py  test_auth_api.py  test_auth_core.py  test_auth_schemas.py  test_balance_anchors.py  test_bank_reconciliation.py  test_budget_templates.py  test_budget_velocity_and_burndown_api.py  test_categories_api.py  test_cli_dev.py  test_cli_migrations.py  test_cli_test.py  test_config.py  test_csv_utils.py  test_dashboard_api.py  test_digest_api.py  test_durable_purchases_api.py  test_forecast_api.py  test_forecast_backtest.py  test_forecast_backtest_cli.py  test_frontend_cutover_routes.py  test_fx_rates.py  test_ingest.py  test_ingest_api.py  test_insights_api.py  test_insights_flow_api.py  test_ios_contract_cli.py  test_isolation_api.py  test_llm_assistants.py  test_llm_usage.py  test_logging_api.py  test_metrics_sparklines.py  test_migrations.py  test_mobile_auth_api.py  test_mock_db_seed.py  (+11 more)
ui/: components.json  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts
(+281 files in other folders)
